--- a/PortalFrontend/src/app/nav/nav.component.html
+++ b/PortalFrontend/src/app/nav/nav.component.html
@@ -16,7 +16,18 @@
         <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">Wiadomości</a>
       </li>
     </ul>
-    <form #LogiForm="ngForm"class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
+
+    <div *ngIf="loggedIn()" class="dropdown">
+      <a class="dropdown-toggle text-light">
+        Witaj!
+      </a>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" ><i class="fa fa-user"></i>  Edytuj profil</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item"><i class="fa fa-singout"></i>  Wyloguj</a>
+      </div>
+    </div>
+    <form *ngIf="!loggedIn()" #LogiForm="ngForm"class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
       <input class="form-control mr-sm-2" type="text" placeholder="Login" [(ngModel)]="model.UserName"  name="UserName" required>
       <input class="form-control mr-sm-2" type="password" placeholder="Hasło" [(ngModel)]="model.password"  name="password" required>
       <button [disabled]="!LogiForm.valid" class="btn btn-primary my-2 my-sm-0" type="submit">Zaloguj</button>
