--- a/PortalFrontend/src/app/nav/nav.component.html
+++ b/PortalFrontend/src/app/nav/nav.component.html
@@ -19,7 +19,7 @@
 
     <div *ngIf="loggedIn()" class="dropdown">
       <a class="dropdown-toggle text-light">
-        Witaj!
+        Witaj {{authService.dekoded?.unique_name |titlecase}}!
       </a>
       <div class="dropdown-menu">
         <a class="dropdown-item" ><i class="fa fa-user"></i>  Edytuj profil</a>
