Add User model and userlist component and auth JWT

--- a/PortalFrontend/src/app/home/home.component.html
+++ b/PortalFrontend/src/app/home/home.component.html
@@ -16,6 +16,6 @@
         <app-register (cancelRegister)="cancel($event)"></app-register>
       </div>
     </div>
+    <app-users-list></app-users-list>
   </div>
-
 </div>
