--- a/PortalFrontend/src/app/nav/nav.component.html
+++ b/PortalFrontend/src/app/nav/nav.component.html
@@ -1,19 +1,22 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <a class="navbar-brand" href="#">Portal</a>
+  <a class="navbar-brand" [routerLink]="['/home']" >Portal</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Użytkownicy</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/uzytkownicy']" >Użytkownicy</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Polubienia</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/polubienia']" >Polubienia</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">Wiadomości</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link " [routerLink]="['/wiadomosci']">Wiadomości</a>
+      </li>
+      <li class="nav-item" >
+        <a class="nav-link " (click)="logout()">Wyloguj</a>
       </li>
     </ul>
 
