--- a/PortalFrontend/src/app/nav/nav.component.html
+++ b/PortalFrontend/src/app/nav/nav.component.html
@@ -1,39 +1,42 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <a class="navbar-brand" [routerLink]="['/home']" >Portal</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  <div class="container">
+    <a class="navbar-brand" [routerLink]="['/home']">Portal</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+      aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['/uzytkownicy']" >Użytkownicy</a>
-      </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['/polubienia']" >Polubienia</a>
-      </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link " [routerLink]="['/wiadomosci']">Wiadomości</a>
-      </li>
-      <li class="nav-item" >
-        <a class="nav-link " (click)="logout()">Wyloguj</a>
-      </li>
-    </ul>
+      <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['/uzytkownicy']">Użytkownicy</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['/polubienia']">Polubienia</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link " [routerLink]="['/wiadomosci']">Wiadomości</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " (click)="logout()">Wyloguj</a>
+        </li>
+      </ul>
 
-    <div *ngIf="loggedIn()" class="dropdown">
-      <a class="dropdown-toggle text-light">
-        Witaj {{authService.dekoded?.unique_name |titlecase}}!
-      </a>
-      <div class="dropdown-menu">
-        <a class="dropdown-item" ><i class="fa fa-user"></i>  Edytuj profil</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item"><i class="fa fa-singout"></i>  Wyloguj</a>
+      <div *ngIf="loggedIn()" class="dropdown">
+        <a class="dropdown-toggle text-light">
+          Witaj {{authService.dekoded?.unique_name |titlecase}}!
+        </a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item"><i class="fa fa-user"></i> Edytuj profil</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item"><i class="fa fa-singout"></i> Wyloguj</a>
+        </div>
       </div>
+      <form *ngIf="!loggedIn()" #LogiForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
+        <input class="form-control mr-sm-2" type="text" placeholder="Login" [(ngModel)]="model.UserName" name="UserName"
+          required>
+        <input class="form-control mr-sm-2" type="password" placeholder="Hasło" [(ngModel)]="model.password"
+          name="password" required>
+        <button [disabled]="!LogiForm.valid" class="btn btn-primary my-2 my-sm-0" type="submit">Zaloguj</button>
+      </form>
     </div>
-    <form *ngIf="!loggedIn()" #LogiForm="ngForm"class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
-      <input class="form-control mr-sm-2" type="text" placeholder="Login" [(ngModel)]="model.UserName"  name="UserName" required>
-      <input class="form-control mr-sm-2" type="password" placeholder="Hasło" [(ngModel)]="model.password"  name="password" required>
-      <button [disabled]="!LogiForm.valid" class="btn btn-primary my-2 my-sm-0" type="submit">Zaloguj</button>
-    </form>
-  </div>
 </nav>
