--- a/PortalFrontend/src/app/nav/nav.component.html
+++ b/PortalFrontend/src/app/nav/nav.component.html
@@ -16,21 +16,20 @@
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link " [routerLink]="['/wiadomosci']">Wiadomości</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link " (click)="logout()">Wyloguj</a>
-        </li>
+        
       </ul>
 
-      <div *ngIf="loggedIn()" class="dropdown">
-        <a class="dropdown-toggle text-light">
+      <div *ngIf="loggedIn()" class="dropdown" dropdown>
+        <a class="dropdown-toggle text-light" dropdownToggle>
           Witaj {{authService.dekoded?.unique_name |titlecase}}!
         </a>
-        <div class="dropdown-menu">
+        <div class="dropdown-menu mt-3" *dropdownMenu>
           <a class="dropdown-item"><i class="fa fa-user"></i> Edytuj profil</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item"><i class="fa fa-singout"></i> Wyloguj</a>
+          <a class="dropdown-item" (click)="logout()"><i class="fa fa-singout"></i> Wyloguj</a>
         </div>
       </div>
+    
       <form *ngIf="!loggedIn()" #LogiForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
         <input class="form-control mr-sm-2" type="text" placeholder="Login" [(ngModel)]="model.UserName" name="UserName"
           required>
