--- a/PortalFrontend/src/app/home/home.component.html
+++ b/PortalFrontend/src/app/home/home.component.html
@@ -5,7 +5,7 @@
       <p class="lead">Zarejestruj się</p>
     </div>
     <div class="text-center">
-      <button class="btn btn-primary btn-lg m-2" (click)="register()">Rejestracja</button>
+      <button class="btn btn-danger btn-lg m-2" (click)="register()">Rejestracja</button>
       <button class="btn btn-info btn-lg m-2">Więcej...</button>
     </div>
   </div>
@@ -16,6 +16,5 @@
         <app-register (cancelRegister)="cancel($event)"></app-register>
       </div>
     </div>
-    <app-users-list></app-users-list>
   </div>
 </div>
