--- a/PortalFrontend/src/app/nav/nav.component.html
+++ b/PortalFrontend/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-info">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-success">
   <div class="container">
     <a class="navbar-brand" [routerLink]="['/home']">Portal</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
@@ -6,7 +6,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-      <ul *ngIf="loggedIn()" class="navbar-nav mr-auto ml-4">
+      <ul *ngIf="loggedIn()" class="navbar-nav mr-auto ml-4 ">
         <li class="nav-item mx-2" routerLinkActive="active">
           <a class="nav-link h4" [routerLink]="['/uzytkownicy']"><i class="fa fa-user" aria-hidden="true"></i></a>
         </li>
@@ -19,12 +19,12 @@
         
       </ul>
 
-      <div *ngIf="loggedIn()" class="dropdown" dropdown>
+      <div *ngIf="loggedIn()" class="dropdown " dropdown>
         <a class="dropdown-toggle text-light" dropdownToggle>
           Witaj {{authService.dekoded?.unique_name |titlecase}}!
         </a>
         <div class="dropdown-menu mt-3" *dropdownMenu>
-          <a class="dropdown-item"><i class="fa fa-user mr-2"></i> Edytuj profil</a>
+          <a class="dropdown-item"><i class="fa fa-user mr-2 "></i> Edytuj profil</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" (click)="logout()"><i class="fa fa-sign-out mr-2"></i> Wyloguj</a>
         </div>
