create Galery Front

--- a/PortalFrontend/src/app/user/user-detail/user-detail.component.html
+++ b/PortalFrontend/src/app/user/user-detail/user-detail.component.html
@@ -96,7 +96,7 @@
             <p>{{user?.iDontLike}}</p>
           </tab>
           <tab heading="Zdjęcia">
-            Tutaj będa zdjęcia
+            <ngx-gallery [options]="galleryOptions" [images]="galleryImages" class="ngx-gallery"></ngx-gallery>
           </tab>
           <tab heading="Wiadomości">
             Tutaj będa Wiadomości
