--- a/PortalFrontend/src/app/nav/nav.component.html
+++ b/PortalFrontend/src/app/nav/nav.component.html
@@ -24,7 +24,7 @@
           Witaj {{authService.dekoded?.unique_name |titlecase}}!
         </a>
         <div class="dropdown-menu mt-3" *dropdownMenu>
-          <a class="dropdown-item"><i class="fa fa-user mr-2 "></i> Edytuj profil</a>
+          <a class="dropdown-item"  [routerLink]="['/uzytkownicy/edycja']"><i class="fa fa-user mr-2 "></i> Edytuj profil</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" (click)="logout()"><i class="fa fa-sign-out mr-2"></i> Wyloguj</a>
         </div>
