Form Edit Profile User

--- a/PortalFrontend/src/app/user/user-detail/user-detail.component.html
+++ b/PortalFrontend/src/app/user/user-detail/user-detail.component.html
@@ -18,7 +18,7 @@
     <div class="col-md-8 col-sm-12">
       <div class="tab-panel">
         <tabset class="user-tabset">
-          <tab heading="Informacje" >
+          <tab heading="Informacje">
             <!-- 
     children: string;
     languages: string; -->
@@ -61,6 +61,12 @@
                 <td>
                   <h5><i class="fa fa-child" aria-hidden="true"></i> Dzieci</h5>
                   <p>{{user?.children}}</p>
+                </td>
+              </tr>
+              <tr>
+                <td >
+                  <h5><i class="fa fa-venus-mars" aria-hidden="true"></i> Płęć</h5>
+                  <p>{{user?.gender}}</p>
                 </td>
               </tr>
             </table>
