--- a/PortalFrontend/src/app/user/user-edit/user-edit.component.scss
+++ b/PortalFrontend/src/app/user/user-edit/user-edit.component.scss
@@ -4,3 +4,11 @@ table{
 td{
     width: 50%;
 }
+.img-radious{
+    border-radius: 50%;
+}
+.img-thumbnail{
+margin:10%;
+height: 80%;
+width: 80%;
+}
