--- a/PortalFrontend/src/app/user/photos/photos.component.html
+++ b/PortalFrontend/src/app/user/photos/photos.component.html
@@ -68,7 +68,7 @@
     <div class="text-cener mb-4">
       <button type="button" (click)="setMain(photo)" class="btn btn-sm btn-block" [ngClass]="photo.isMain ? 'btn-success active' : 'btn-info'"
         [disabled]="photo.isMain">Główne</button>
-      <button type="button" class="btn btn-sm btn-danger btn-block mb-4" [disabled]="photo.isMain"><i
+      <button type="button" (click)="delPhoto(photo.id)" class="btn btn-sm btn-danger btn-block mb-4" [disabled]="photo.isMain"><i
           class="fa fa-trash-o"></i></button>
       <hr>
     </div>
