--- a/PortalFrontend/src/app/nav/nav.component.css
+++ b/PortalFrontend/src/app/nav/nav.component.css
@@ -2,6 +2,26 @@
     cursor: pointer;
 }
 img{
-    max-height: 50px;
+    position: absolute;
+    border: rgba(255, 255, 255, 1) 8px solid;
+    max-height: 100px;
     border-radius: 50%;
+    top:-20px;
+    z-index: 10;
+}
+.dropdown-menu{
+    position: absolute;
+    top: 0px!important;
+    left: -140px !important;
+    z-index: 9;
+   background-color:  #4bbf73!important;
+}
+.dropdown-item{
+    background-color:  #4bbf73!important;
+}
+.dropdown-item:hover{
+    background-color:  #3f995e!important;
+}
+.navbar-nav{
+    flex-direction: row;
 }
