--- a/PortalFrontend/src/app/register/register.component.html
+++ b/PortalFrontend/src/app/register/register.component.html
@@ -1,14 +1,91 @@
-<form #RegisterForm="ngForm" (ngSubmit)="register()">
+<form [formGroup]="registerForm" (ngSubmit)="register()">
   <h2 class="text-center text-primary">Zapisz sie</h2>
   <hr>
+
+
   <div class="form-group">
-    <input type="text" class="form-control " placeholder="Nazwa użytkownia" required name="userName"
-      [(ngModel)]="model.UserName">
+    <input type="text" class="form-control " placeholder="Nazwa użytkownia" name="userName" formControlName="userName"
+      [ngClass]="{'is-invalid': registerForm.get('userName').errors &&  registerForm.get('userName').touched}">
+    <div class="invalid-feedback">Podaj nazewę użytkownika</div>
   </div>
+
+
   <div class="form-group">
-    <input type="password" class="form-control " placeholder="Hasło" required name="password" [(ngModel)]="model.password">
+    <label class="control-label" style="margin-right:10px">Płeć: </label>
+    <label class="radio-inline">
+      <input class="mr-3" type="radio" value="mężczyzna" formControlName="gender">Mężczyzną
+    </label>
+    <label class="radio-inline ml-3">
+      <input class="mr-3" type="radio" value="kobieta" formControlName="gender">Kobietą
+    </label>
   </div>
-  <div class="form-group text-center">
+
+  <div class="form-group">
+    <input type="text" class="form-control" placeholder="Data urodzenia" formControlName="dateOfBirth" bsDatepicker [bsConfig]="bsConfig"
+           [ngClass]="{'is-invalid': registerForm.get('dateOfBirth').errors && registerForm.get('dateOfBirth').touched}">
+    <div class="invalid-feedback" 
+          *ngIf="registerForm.get('dateOfBirth').touched && registerForm.get('dateOfBirth').hasError('required')">
+        Data urodzenia jest wymagana
+    </div>
+  </div>
+
+  <div class="form-group">
+    <input class="form-control" placeholder="Miasto" formControlName="city"
+           [ngClass]="{'is-invalid': registerForm.get('city').errors && registerForm.get('city').touched}" >
+    <div class="invalid-feedback" 
+          *ngIf="registerForm.get('city').touched && registerForm.get('city').hasError('required')">  
+        Miasto jest wymagane
+      </div>
+  </div>
+
+
+  <div class="form-group">
+    <input class="form-control" placeholder="Kraj" formControlName="country"
+           [ngClass]="{'is-invalid': registerForm.get('country').errors && registerForm.get('country').touched}" >
+    <div class="invalid-feedback" 
+          *ngIf="registerForm.get('country').touched && registerForm.get('country').hasError('required')">
+        Kraj jest wymagany
+    </div>
+  </div>
+
+
+
+
+
+  <div class="form-group">
+    <input type="password" class="form-control " placeholder="Hasło" name="password" formControlName="password"
+      [ngClass]="{'is-invalid': registerForm.get('password').errors &&  registerForm.get('password').touched}">
+    <div class="invalid-feedback"
+      *ngIf="registerForm.get('password').hasError('required') && registerForm.get('password').touched">
+      Hasło jest wymagane
+    </div>
+    <div class="invalid-feedback"
+      *ngIf="registerForm.get('password').hasError('minlength') && registerForm.get('password').touched">
+      Hasło nie może mieć mniej niż 6 znaki
+    </div>
+    <div class="invalid-feedback"
+      *ngIf="registerForm.get('password').hasError('maxlength') && registerForm.get('password').touched">
+      Hasło nie może mieć więcej niż 12 znaków
+    </div>
+  </div>
+
+
+  <div class="form-group">
+    <input type="password" class="form-control " placeholder="Powtórz hasło" name="confirmPassword"
+      formControlName="confirmPassword" [ngClass]="{'is-invalid': registerForm.get('confirmPassword').errors &&  
+      registerForm.get('confirmPassword').touched || registerForm.hasError('mismatch')}">
+    <div class="invalid-feedback"
+      *ngIf="registerForm.get('confirmPassword').hasError('required') && registerForm.get('confirmPassword').touched">
+      Hasło jest wymagane
+    </div>
+    <div class="invalid-feedback"
+      *ngIf=" registerForm.hasError('mismatch')&& registerForm.get('confirmPassword').touched">
+      Podane hasła są różne
+    </div>
+  </div>
+
+
+  <div class=" form-group text-center">
     <button class="btn btn-success m-2" type="submit">Rejestracja</button>
     <button class="btn btn-defoult m-2" type="submit" (click)="cancel()">Anuluj</button>
   </div>
