--- a/PortalFrontend/src/app/user/user-card/user-card.component.html
+++ b/PortalFrontend/src/app/user/user-card/user-card.component.html
@@ -1,6 +1,8 @@
 <div class="card">
   <div class="card-image-wrapper">
-    <img [src]="user.photoUrl" class="card-img-top">
+    <!-- <img [src]="user.photoUrl" class="card-img-top"> -->
+    <img class="card-img-top" [src]="user.photoUrl ? user.photoUrl :
+    user.gender=='kobieta'? '../../assets/women.svg':'../../assets/men.svg'">
     <ul class="list-inline text-center user-icons animation">
       <li class="list-inline-item">
         <button class="btn btn-danger">
