--- a/PortalFrontend/src/app/user/user-edit/user-edit.component.html
+++ b/PortalFrontend/src/app/user/user-edit/user-edit.component.html
@@ -12,7 +12,9 @@
   <div class="row">
     <div class="col-md-4 col-sm-12">
       <div class="card">
-        <img [src]="user?.photoUrl" class="card-img-top img-radious img-thumbnail">
+        <!-- <img [src]="user?.photoUrl" class="card-img-top img-radious img-thumbnail"> -->
+        <img class="card-img-top img-radious img-thumbnail" [src]="user.photoUrl ? user.photoUrl :
+        user.gender=='kobieta'? '../../assets/women.svg':'../../assets/men.svg'">
         <div class="card-body text-center">
           <h4 class="card-title">{{user?.userName}}, {{user?.age}}</h4>
           <p class="card-text">{{user?.city}}, {{user?.country}}</p>
