--- a/PortalFrontend/src/app/user/photos/photos.component.html
+++ b/PortalFrontend/src/app/user/photos/photos.component.html
@@ -23,9 +23,9 @@
       </thead>
       <tbody>
         <tr *ngFor="let item of uploader.queue">
-          <td><strong>{{ item?.file?.name }}</strong></td>
+          <td ><p style=" max-width: 150px; word-wrap: break-word;">{{ item?.file?.name }}</p></td>
           <td *ngIf="uploader.options.isHTML5" nowrap>{{ item?.file?.size/1024/1024 | number:'.2' }} MB</td>
-          <td nowrap>
+          <td >
             <button type="button" class="btn btn-success btn-sm" (click)="item.upload()"
               [disabled]="item.isReady || item.isUploading || item.isSuccess">
               <span class="fa fa-upload"></span>
@@ -44,7 +44,7 @@
       <div>
         Postęp w kolejce
         <div class="progress mb-4">
-          <div class="progress-bar" role="progressbar" [ngStyle]="{ 'width': uploader.progress + '%' }"></div>
+          <div class="progress-bar progress-bar-striped bg-info" role="progressbar" [ngStyle]="{ 'width': uploader.progress + '%' }"></div>
         </div>
       </div>
       <button type="button" class="btn btn-success btn-s" (click)="uploader.uploadAll()"
