--- a/PortalFrontend/src/app/nav/nav.component.html
+++ b/PortalFrontend/src/app/nav/nav.component.html
@@ -27,7 +27,7 @@
       </a>
       <div class="dropdown-menu " *dropdownMenu>
         <a class="dropdown-item text-light" [routerLink]="['/uzytkownicy/edycja']"><i class="fa fa-user mr-2 "></i>
-          Edytuj profil</a>
+          Mój profil</a>
         <a class="dropdown-item text-light" (click)="logout()"><i class="fa fa-sign-out mr-2"></i> Wyloguj</a>
       </div>
     </div>
