--- a/PortalFrontend/src/app/user/user-edit/user-edit.component.html
+++ b/PortalFrontend/src/app/user/user-edit/user-edit.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4">
-    <h4>Edycja profilu</h4>
+    <h4>Mój profil</h4>
   </div>
   <div class="col-md-8">
     <div *ngIf="editForm.dirty" class="alert alert-warning">
