--- a/PortalFrontend/src/styles.css
+++ b/PortalFrontend/src/styles.css
@@ -57,3 +57,7 @@
     border-top: 1px solid #eee;
     padding: 15px 0;
   }
+  .page-item.active .page-link {
+    background-color:  #4bbf73!important;
+    border-color:  #4bbf73!important;
+}
