--- a/PortalFrontend/src/app/user/users-list/users-list.component.html
+++ b/PortalFrontend/src/app/user/users-list/users-list.component.html
@@ -1,18 +1,34 @@
 <div class="container">
   <div class="row">
-    
+
     <div class="col-md-3 mt-5">
       <div class="alert alert-dismissible alert-success">
         <strong>{{users.length}} z {{page.totalItems}}</strong> Wyników
       </div>
-      <form class="form mt-5 " #form="ngForm" (ngSubmit)="loadUsers()" novalidate>
+      <h4>Sortowanie</h4>
+      <div class="btn-group btn-block my-4" dropdown>
+        <button dropdownToggle type="button" class="btn-outline-primary btn  btn-block btndropdown-toggle"
+          aria-controls="dropdown-animated">
+        {{sortParam}}
+        </button>
+        <ul id="dropdown-animated" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-animated">
+          <li *ngFor="let item of sortList" role="menuitem" (click)="sort(item.id)">
+            <p class="dropdown-item"> {{item.display}}</p>
+          </li>
+
+        </ul>
+      </div>
+      <h4>Filtrownie</h4>
+      <form class="form mt-3" #form="ngForm" (ngSubmit)="loadUsers()" novalidate>
         <div class="form-group">
           <label for="minAge">Wiek od {{userParams.minAge}} lat</label>
-          <input type="range" min="16" max="100" ma class="form-control-range" id="minAge" [(ngModel)]="userParams.minAge" name="minAge">
+          <input type="range" min="16" max="100" ma class="form-control-range" id="minAge"
+            [(ngModel)]="userParams.minAge" name="minAge">
         </div>
         <div class="form-group px-2">
           <label for="maxAge">Wiek do {{userParams.maxAge}} lat</label>
-          <input type="range" min="16" max="100" ma class="form-control-range" id="maxAge" [(ngModel)]="userParams.maxAge" name="maxAge">
+          <input type="range" min="16" max="100" ma class="form-control-range" id="maxAge"
+            [(ngModel)]="userParams.maxAge" name="maxAge">
         </div>
         <div class="form-group px-2">
           <label for="gender">Płeć: </label>
@@ -27,11 +43,13 @@
           <input type="text" class="form-control ml-1" id="city" [(ngModel)]="userParams.city" name="city">
         </div>
         <button type="submit" class="btn btn-info btn-block" style="margin-left:10px">Zastosuj filtr</button>
-        <button type="button" class="btn btn-danger btn-block" style="margin-left:10px" (click)="resetFilters()">Zresetuj
+        <button type="button" class="btn btn-danger btn-block" style="margin-left:10px"
+          (click)="resetFilters()">Zresetuj
           filtr</button>
       </form>
     </div>
     <div class="col-md-9">
+
       <div class="row">
         <pagination class="ml-auto pagination-success pagination-lg mt-3" [totalItems]="page.totalItems"
           [itemsPerPage]="page.itemPerPage" [(ngModel)]="page.currantPage" [maxSize]="5" previousText="&lsaquo;"
