--- a/PortalFrontend/src/app/user/user-card/user-card.component.html
+++ b/PortalFrontend/src/app/user/user-card/user-card.component.html
@@ -5,7 +5,7 @@
     user.gender=='kobieta'? '../../assets/women.svg':'../../assets/men.svg'">
     <ul class="list-inline text-center user-icons animation">
       <li class="list-inline-item">
-        <button class="btn btn-danger">
+        <button class="btn btn-danger" (click)="sendLike(user.id)">
           <i class="fa fa-heart"></i>
         </button>
       </li>
