--- a/PortalFrontend/src/app/user/user-card/user-card.component.html
+++ b/PortalFrontend/src/app/user/user-card/user-card.component.html
@@ -15,7 +15,7 @@
         </button>
       </li>
       <li class="list-inline-item">
-        <button class="btn btn-success">
+        <button class="btn btn-success" (click)="openMsg()">
           <i class="fa fa-comment"></i>
         </button>
       </li>
